--- a/Admin Webpage/problem.html
+++ b/Admin Webpage/problem.html
@@ -39,7 +39,7 @@
 					<a href="contact.html">contact</a>
 				</li>
 				<li>
-					<a href="problem.html">complaints</a>>
+					<a href="problem.html">complaints</a>
 				</li>
 			</ul>
 			<!-- social media -->
@@ -73,9 +73,13 @@
 		</div>
 	</nav>
 	<!-- Body -->
-	<h2>Contact Us</h2>
-	<h4>Nabeel Danish 18I-0579</h4>
-	<h4>Farjad Ilyas 18I-0436</h4>
+	<h2>View Complaints</h2>
+	<h4 id="progress">Connecting ...</h4>
+	<table>
+	</table>
+	<br>
+	<br>
 	<!-- javascript -->
+	<script type="text/javascript" src="problem_app.js"></script>
 </body>
 </html>
