--- a/Admin Webpage/vehicles.html
+++ b/Admin Webpage/vehicles.html
@@ -38,6 +38,9 @@
 				<li>
 					<a href="contact.html">contact</a>
 				</li>
+				<li>
+					<a href="problem.html">complaints</a>
+				</li>
 			</ul>
 			<!-- social media -->
 			<ul class="social-icons">
@@ -74,6 +77,8 @@
 	<h4 id="progress">Connecting ...</h4>
 	<table>
 	</table>
+	<br>
+	<br>
 	<!-- javascript -->
 	<script type="text/javascript" src="vehicle_app.js"></script>
 </body>
