--- a/Admin Webpage/index.html
+++ b/Admin Webpage/index.html
@@ -38,6 +38,9 @@
 				<li>
 					<a href="contact.html">contact</a>
 				</li>
+				<li>
+					<a href="problem.html">complaints</a>
+				</li>
 			</ul>
 			<!-- social media -->
 			<ul class="social-icons">
