Admin Panel UI Elements for Testing
- Added UI Elements like Loading Circles, Error Messages
- Added Search Bar Element for Vehicles and Complaints Web Page
- Improved Connection Page and Login Web Page

--- a/Admin Webpage/drivers.html
+++ b/Admin Webpage/drivers.html
@@ -75,6 +75,7 @@
 	<!-- Body -->
 	<h2>Current Driver's Registeration Requests</h2>
 	<h4 id="progress">Connecting ...</h4>
+	<div id="spinner" class="loader" style="margin: auto;"></div>
 	<table>
 	</table>
 	<!-- javascript -->
