--- a/Admin Webpage/index.html
+++ b/Admin Webpage/index.html
@@ -74,6 +74,8 @@
 	</nav>
 	<!-- Body -->
 	<h2>Welcome to Saavari Admin Panel</h2>
+	<h4 id="progress">Connecting ...</h4>
+	<div id="spinner" class="loader" style="margin: auto;"></div>
 	<!-- javascript -->
 	<script type="text/javascript" src="index_app.js"></script>
 </body>
