--- a/Admin Webpage/ride_detail.html
+++ b/Admin Webpage/ride_detail.html
@@ -81,6 +81,7 @@
 	<!-- Body -->
 	<h2>View Ride Details</h2>
 	<h4 id="progress">Connecting ...</h4>
+	<div id="spinner" class="loader" style="margin: auto;"></div>
 	<table>
 	</table>
 	<br>
