--- a/Admin Webpage/vehicles.html
+++ b/Admin Webpage/vehicles.html
@@ -75,6 +75,15 @@
 	<!-- Body -->
 	<h2>Current Vehicle's Registeration Requests</h2>
 	<h4 id="progress">Connecting ...</h4>
+	<div id="spinner" class="loader" style="margin: auto;"></div>
+	<div id="search_bar" style="text-align: center; visibility: hidden;">
+		<input id="search_text" style="margin: auto;" type="text" placeholder="Search">
+		<select id="search_option">
+			<option>MAKE</option>
+			<option>MODEL</option>
+		</select>
+		<button id="search_btn" style="padding: 0%; font-size: 12;">SEARCH</button>
+	</div>
 	<table>
 	</table>
 	<br>
