--- a/Admin Webpage/respond.html
+++ b/Admin Webpage/respond.html
@@ -102,7 +102,7 @@
 				<input type="radio" id="resolved" name="resolved" value="resolved"><label for="resolved">  YES</label>
 			</td>
 			<td>
-				<input type="radio" id="not_resolved" name="not_resolved" value="not_resolved"><label for="not_resolved">  NO</label>
+				<input type="radio" id="not_resolved" name="resolved" value="not_resolved"><label for="not_resolved">  NO</label>
 			</td>
 		</tr>
 		<tr>
